--- a/css/css.css
+++ b/css/css.css
@@ -5,15 +5,36 @@ body{
 
 nav{
 	background-color: #000000;
-	height: 80px;
+	height: 86px;
 	width: 1000px;
-	margin: -8px auto 10px auto;
-	border-radius: 20px;
+	margin: -3px auto 10px auto;
+	border-top: 2px #222 solid;
+	border-bottom: 2px solid #222;
 }
+
+
+.navbild1{
+	float:left;
+	margin-left:-10px;
+}
+
+.navbild2{
+	float: right;
+	margin-right: -10px;
+}
+
 
 .navlink{
 	position: relative;
 	color: white;
 	float: left;
-	margin: 0px 0px 0px 20px;
+	margin: 5px 0px 0px 20px;
+}
+.navlink h2 {
+ 	color:white;
+ 	transition: color 1s; 
+}
+
+.navlink h2:hover{
+	color: lime;
 }
