--- a/css/css.css
+++ b/css/css.css
@@ -1,3 +1,25 @@
+@keyframes test{
+	from{margin-top:-100px;}
+	to{margin-top:-20px;}
+}
+
+.test{
+	animation-name:test;
+	animation-duration:0.5s;
+	background: linear-gradient(to bottom, #000000 0%,#3f3f3f 100%);
+	height: 76px;
+	width: 1000px;
+	margin: -20px auto 10px auto;
+	border-top: 2px #222 solid;
+	border-bottom: 2px solid #222;
+	z-index: 1;
+}
+
+.test h3 {
+	color: white;
+	margin: 20px 0px 0px 10px;
+}
+
 body{
 	background-image: url("../img/bbild.jpg");
 	background-size: cover;
@@ -5,7 +27,7 @@ body{
 
 nav{
 	background-color: #000000;
-	height: 86px;
+	height: 98px;
 	width: 1000px;
 	margin: -3px auto 10px auto;
 	border-top: 2px #222 solid;
@@ -14,11 +36,31 @@ nav{
 
 
 .navbild1{
+	width:11px;
+	height:100px;
 	float:left;
 	margin-left:-10px;
+
 }
 
 .navbild2{
+	width:10px;
+	height:100px;
+	float: right;
+	margin-right: -10px;
+}
+
+.navbild3{
+	width:11px;
+	height:170px;
+	float:left;
+	margin-left:-10px;
+
+}
+
+.navbild4{
+	width:10px;
+	height:170px;
 	float: right;
 	margin-right: -10px;
 }
@@ -40,25 +82,51 @@ nav{
 }
 
 .ruta1{
+	position: relative;
+	height:400px;
+	width:300px;
+	margin: 0px 0px 0px 192px;
+	border: 2px solid #222;
 
 }
 
 .ruta2{
-	
+	position: relative;
+	height:400px;
+	width:300px;
+	margin: -404px 0px 0px 522px;
+	border: 2px solid #222;
+
 }
 
 .ruta3{
-	
+	position: relative;
+	height:400px;
+	width:300px;
+	margin: -404px 0px 0px 852px;
+	border: 2px solid #222;	
 }
 
 .ruta4{
-	
+	position: relative;
+	height: 200px;
+	width: 300px;
+	margin: 20px 0px 0px 192px;
+	border: 2px solid #222;
 }
 
 .ruta5{
-	
+	position: relative;
+	height: 200px;
+	width: 300px;
+	margin: -204px 0px 0px 522px;
+	border: 2px solid #222;	
 }
 
 .ruta6{
-	
+	position: relative;
+	height: 200px;
+	width: 300px;
+	margin: -204px 0px 0px 852px;
+	border: 2px solid #222;	
 }
