--- a/css/css.css
+++ b/css/css.css
@@ -99,6 +99,7 @@ nav{
 }
 
 #search, 
+
 #submit {
     float: left;
 }
@@ -135,15 +136,10 @@ nav{
     font: bold 14px Arial, Helvetica;
     color: #23441e;    
     text-shadow: 0 1px 0 rgba(255,255,255,0.5);
-}
-
-#submit:hover {       
-    background-color: #95d788;
-    background-image: linear-gradient(#6cbb6b, #95d788);
-}   
+} 
 
 #submit:active {       
-    background: #95d788;
+    background: orange;
     outline: none;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5) inset;        
 }
@@ -160,7 +156,7 @@ main{
 }
 
 .main{
-	margin-top: 10px;
+	margin-top: 0px;
 	margin-left:170px;
 	width:1000px;
 	height:auto;
@@ -169,9 +165,14 @@ main{
 .ruta1{
 	display:inline-block;
 	position: relative;
-	height:400px;
-	width:300px;
-	margin: 0px 0px 0px 10px;
+	height:317px;
+	width:214px;
+	margin: 20px 0px 0px 28px;
 	border: 2px solid #222;
 
+}
+
+.ruta1 img{
+	width: 214px; 
+	height:317px;
 }
