--- a/css/css.css
+++ b/css/css.css
@@ -156,7 +156,7 @@ main{
 }
 
 .main{
-	margin-top: 0px;
+	margin-top: 10px;
 	margin-left:170px;
 	width:1000px;
 	height:auto;
@@ -175,4 +175,30 @@ main{
 .ruta1 img{
 	width: 214px; 
 	height:317px;
+}
+
+.filmp{
+	width: 100%;
+	height:40px;
+	bottom:0;
+	background-color: rgba(1,1,1,0.75);
+	position: absolute;
+	border-top:2px solid black;
+}
+
+.filmp p{
+	color: white;
+	text-align: center;
+}
+
+.overlay{
+	background-color: rgba(1,1,1,0.0);
+	width:100%;
+	height:100%;
+	margin-top: -321px;
+	position: absolute;
+}
+
+.overlay:hover{
+	background-color: rgba(1,1,1,0.5)
 }
