--- a/css/css.css
+++ b/css/css.css
@@ -202,3 +202,12 @@ main{
 .overlay:hover{
 	background-color: rgba(1,1,1,0.5)
 }
+
+.login{
+	border: 2px solid black;
+	margin: 0px 0px 0px 200px;
+	padding: 10px 10px 10px 10px;
+	background-color: rgba(0,0,0,0.5);
+	height:100px;
+	width:300px;
+}
