--- a/css/css.css
+++ b/css/css.css
@@ -19,7 +19,19 @@
 .test h3 {
 	color: white;
 	margin: 20px 0px 0px 10px;
+	float: left;
 }
+
+.fact{
+	border: 2px solid black;
+	margin: 0px 0px 0px 200px;
+	padding: 10px 10px 10px 10px;
+	background-color: rgba(0,0,0,0.5);
+	height:330px;
+	width:915px;
+}
+
+
 
 body{
 	background-image: url("../img/bbild.jpg");
@@ -175,6 +187,43 @@ main{
 .ruta1 img{
 	width: 214px; 
 	height:317px;
+}
+
+.ruta2{
+	height:317px;
+	margin: -60px 0px 0px 0px;
+	border: 2px solid #222;
+	float:left;
+	width:215px;
+
+}
+
+#factWrapper{
+
+	height:250px;
+
+}
+.about{
+	float:left;
+	margin:0px 0px 0px 15px;
+	max-width: 680px; 
+	color: grey;
+}
+
+.ruta2 img{
+	width: 100%;
+	height:100%;
+}
+
+.name{
+	margin: -20px 0px 0px 250px;
+	color: black;
+	text-decoration: underline;
+}
+
+.name h1{
+	text-decoration: none;
+	color:grey;
 }
 
 .filmp{
