--- a/css/css.css
+++ b/css/css.css
@@ -10,10 +10,9 @@
 	background: linear-gradient(to bottom, #000000 0%,#3f3f3f 100%);
 	height: 76px;
 	width: 1000px;
-	margin: -20px auto 10px 170px;
+	margin: -20px auto 10px 175px;
 	border-top: 2px #222 solid;
 	border-bottom: 2px solid #222;
-	z-index: -99;
 }
 
 .test h3 {
@@ -47,7 +46,7 @@ nav{
 	background-color: #000000;
 	height: 98px;
 	width: 1000px;
-	margin: -3px auto 10px 170px;
+	margin: -3px auto 10px auto;
 	border-top: 2px #222 solid;
 	border-bottom: 2px solid #222;
 }
@@ -256,14 +255,7 @@ main{
 	background-color: rgba(1,1,1,0.5)
 }
 
-.login{
-	border: 2px solid black;
-	margin: 0px 0px 0px 200px;
-	padding: 10px 10px 10px 10px;
-	background-color: rgba(0,0,0,0.5);
-	height:100px;
-	width:300px;
-}
+
 input {
 	margin: 5px 0px 10px 0px;
 }
@@ -291,12 +283,32 @@ input {
 .footer {
   color: #fff;
   clear: both;
-  margin: 0px 0px 0px 0px;
- background-color: rgba(0,0,0,0.7);
+  margin: 10px 0px 0px 0px;
+  background-color: rgba(0,0,0,0.7);
   position: relative;
-  top: 100px;
-  height:80px; 
+  margin-top: 140px;
+  height:50px; 
   width:100%;
+  text-align: center;
+}
+ 
+ .footer img{
+ 	height: 35px;
+ 	margin: 5px 0px 0px 0px
 
+}
+
+.login{
+	border: 2px solid black;
+	margin: 0px 0px 0px 200px;
+	padding: 10px 10px 50px 10px;
+	background-color: rgba(0,0,0,0.5);
+	height:100px;
+	width:300px;
+	bottom:0px;
+}
+
+.cheat{
+	height: 350px;
 }
 
